# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-04-30 08:46:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-20

    Summary:
      i18n, fix igettext
    Revision:
      itools--main--0.9--patch-20


    modified files:
     Changelog i18n/igettext.py


2005-04-30 08:44:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-19

    Summary:
      documentation, work on the handler state section
    Revision:
      itools--main--0.9--patch-19


    modified files:
     Changelog doc/files.tex


2005-04-28 21:47:40 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-18

    Summary:
      zope, remove obsolete module "auth.py"
    Revision:
      itools--main--0.9--patch-18


    removed files:
     zope/.arch-ids/auth.py.id zope/auth.py

    modified files:
     Changelog


2005-04-28 21:15:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-17

    Summary:
      catalog, improve analyser tests
    Revision:
      itools--main--0.9--patch-17


    modified files:
     Changelog catalog/test_analysers.py


2005-04-28 18:05:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-16

    Summary:
      handlers, move the PO and MO handlers to the new package gettext
    Revision:
      itools--main--0.9--patch-16


    new files:
     gettext/.arch-ids/=id gettext/.arch-ids/__init__.py.id
     gettext/__init__.py

    modified files:
     Changelog gettext/MO.py gettext/PO.py handlers/__init__.py
     setup.py xhtml/__init__.py

    renamed files:
     handlers/.arch-ids/MO.py.id
       ==> gettext/.arch-ids/MO.py.id
     handlers/.arch-ids/PO.py.id
       ==> gettext/.arch-ids/PO.py.id
     handlers/MO.py
       ==> gettext/MO.py
     handlers/PO.py
       ==> gettext/PO.py

    new directories:
     gettext gettext/.arch-ids


2005-04-28 16:33:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-15

    Summary:
      handlers, add image handler
    Revision:
      itools--main--0.9--patch-15

