@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-04-30 09:25:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-21
+
+    Summary:
+      resources, add decoder for file names
+    Revision:
+      itools--main--0.9--patch-21
+
+
+    modified files:
+     Changelog i18n/__init__.py resources/base.py
+
+
 2005-04-30 08:46:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-20
 
     Summary:
